[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_01/Pawn_01-Legs_Hip.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_01/Pawn_01-Legs_F.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_01/Pawn_01-Legs_B.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pawns/Pawn_01/Pawn_01-Head_Hair.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Pawns/Pawn_01/Pawn_01-Head.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Pawns/Pawn_01/Pawn_01-Head_Face.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Pawns/Pawn_01/Pawn_01-Body.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Pawns/Pawn_01/Pawn_01_Part_Arm.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Pawns/Pawn_01_Parts/Pawn_01_Pic.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_01-Head/Pawn_01-Head_Hair:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_01_Part_Arm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 89.7, 83.7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pawn_01-Head/Pawn_01-Head_Face:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 4, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pawn_01-Legs_F:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pawn_01-Legs_B:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[node name="Pawn_01_Pic" type="Node2D"]
script = ExtResource( 9 )

[node name="Pawn_01-Legs_B" type="Sprite" parent="."]
position = Vector2( 1, -13 )
texture = ExtResource( 3 )
hframes = 37
frame = 2

[node name="Pawn_01-Head" type="Sprite" parent="."]
position = Vector2( 0, -47 )
texture = ExtResource( 5 )
hframes = 3

[node name="Pawn_01-Head_Face" type="Sprite" parent="Pawn_01-Head"]
texture = ExtResource( 6 )
hframes = 10

[node name="Pawn_01-Head_Hair" type="Sprite" parent="Pawn_01-Head"]
texture = ExtResource( 4 )
hframes = 17
frame = 8

[node name="Pawn_01-Body" type="Sprite" parent="."]
position = Vector2( 0, -31 )
texture = ExtResource( 7 )

[node name="Pawn_01-Legs_F" type="Sprite" parent="."]
position = Vector2( -1, -13 )
texture = ExtResource( 2 )
hframes = 37
frame = 7

[node name="Pawn_01-Legs_Hip" type="Sprite" parent="."]
position = Vector2( 0, -13 )
texture = ExtResource( 1 )
hframes = 37
frame = 2

[node name="Pawn_01_Part_Arm" type="Sprite" parent="."]
position = Vector2( 0, -34 )
rotation = 1.49503
texture = ExtResource( 8 )
offset = Vector2( 12, 4 )
hframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
